@@ -1,3 +1,6 @@
+R1.4.0      09-23-2002    Kukhee Kim (khki)
+                        - implement rms and average, valid and invalid counter
+
 R1.3.0      09-03-2020    Kukhee Kim (khkim)
                         - build with pcavLib API R1.1.0
                         - add waveform data selector
